--- a/index.pug
+++ b/index.pug
@@ -48,7 +48,7 @@ html(lang="en-US")
   body.is-loading
     #app.wrap(
       ref="app",
-      :style="{'--color-first': firstColor, '--color-last': lastColor}"
+      :style="{'--color-first': firstColor, '--color-last': lastColor, '--color-last-contrast': lastColorContrast}"
       :class="{'is-loading': isLoading, 'is-animating': isAnimating, 'wrap__hidetext': hideText, 'wrap__hasOutlines': hasOutlines, 'wrap__hasGradients': hasGradients, 'wrap__showSettings': settingsVisible, 'wrap__hasBackground': hasBackground, 'wrap__hasBleed': hasBleed, 'wrap__hasDithering': hasGrain}")
       .bg-wrap
         .bg(:style="{'background-image': backgroundGradient}")
