--- a/index.pug
+++ b/index.pug
@@ -60,7 +60,7 @@ html(lang="en-US")
         label.pannel__setting
           h4.pannel__settingtitle Randomizer Engine
           .pannel__inputs
-            select(v-model.number="geneartorFunction")
+            select(v-model.number="generatorFunction")
               option(v-for="functionName in generatorFunctionList", :value=functionName).
                 {{ functionName }}
 
@@ -80,7 +80,7 @@ html(lang="en-US")
           .pannel__inputs
             input(type="range", v-model.number="padding", min="0", max="1", step=".001")
 
-        label.pannel__setting(v-if="geneartorFunction !== 'RandomColor.js' ")
+        label.pannel__setting(v-if="generatorFunction !== 'RandomColor.js' ")
           h4.pannel__settingtitle Color Mode
           .pannel__inputs
             select(v-model="colorMode")
@@ -101,7 +101,7 @@ html(lang="en-US")
           .pannel__inputs
             input(type="range", v-model.number="colorsInGradient", min="2", :max="amount")
 
-        label.pannel__setting(v-if="geneartorFunction !== 'Full Random' && geneartorFunction !== 'RandomColor.js'")
+        label.pannel__setting(v-if="generatorFunction !== 'Full Random' && generatorFunction !== 'RandomColor.js'")
           h4.pannel__settingtitle
             span Min. Hue angle difference
             input(type="number", v-model.number="minHueDistance", min="1", :max="360/colorsInGradient", step="1")
