--- a/main.scss
+++ b/main.scss
@@ -238,6 +238,24 @@ button {
 
 .color__info {
   display: none;
+  opacity: 1;
+  position: absolute;
+  top: 5.5rem;
+  font-size: 0.75em;
+
+  ul, ol {
+    list-style: none;
+    font-size: 0.7em;
+  }
+
+  li {
+    margin-top: .5em;
+  }
+}
+
+.color:hover .color__info {
+  opacity: 1;
+  transition: 300ms opacity;
 }
 
 .color__values {
@@ -253,20 +271,62 @@ button {
   }
 }
 
+.wrap__showcontrast .color:hover .color__contrasts {
+  opacity: 0;
+
+  @media (max-width: 850px) {
+    opacity: 1;
+  }
+}
+
+.color__contrasts {
+  opacity: 0;
+  transition: 200ms opacity;
+  position: absolute;
+  left: 0;
+  top: 50%;
+
+
+  transform: translateY(-50%);
+  height: 10px;
+  transform: 200ms opacity linear;
+
+  .wrap__hidetext & {
+
+  }
+
+  .wrap__showcontrast & {
+    opacity: 1;
+    transition-delay: .3s;
+
+  }
+
+  @media (max-width: 850px) {
+    left: auto;
+    right: var(--size-gutter);
+  }
+}
+
 .color__contrasts ol {
   display: flex;
+  height: 100%;
   list-style-type: none;
-  margin-left: .5em;
-  margin-top: .3em;
 }
 
 .color__contrasts ol li {
   position: relative;
-  width: .75em;
-  height: .75em;
+  height: 8px;
+  width: 8px;
+  border-radius: 5px;
   background: var(--paircolor);
-  border-radius: 50%;
-  margin-right: .25em;
+
+  .wrap__hasBleed & {
+    box-shadow: 0 0 5px var(--paircolor);
+  }
+}
+
+.color__contrasts ol li + li {
+  margin-left: 5px;
 }
 
 .color__contrasts var {
@@ -287,6 +347,7 @@ button {
   @media (max-width: 850px) {
     text-align: left;
     font-weight: 400;
+    overflow: hidden;
   }
 }
 
@@ -300,13 +361,10 @@ button {
   @media (max-width: 850px) {
     display: block;
     width: 100%;
-    overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
   }
 }
-
-
 
 .color {
   @for $i from 1 through 10 {
@@ -324,6 +382,19 @@ button {
   .color__name {
     opacity: 0;
   }
+}
+
+.wrap__showcontrast .color__value {
+  opacity: 0;
+
+  @media (max-width: 850px) {
+    opacity: 1;
+  }
+}
+
+.wrap__showcontrast .color:hover .color__value {
+  opacity: 1;
+  transition-delay: 350ms;
 }
 
 .buttons {
