--- a/index.pug
+++ b/index.pug
@@ -159,15 +159,15 @@ html(lang="en-US")
           article.footer__about
             h2 FarbVélo
             p.
-              FarbVélo (Swiss-German for color bicycle) is a playful color picking tool. It follows simple rules and uses lots of gerates random numbers to help you come up with pleasing color combinations or just chill while cycling through color harmonies (I almost find it a bit psychedelic while listening to <a href="https://mynoise.net/NoiseMachines/tropicalRainNoiseGenerator.php">custom made white noise</a>).
+              FarbVélo (Swiss-German for color bicycle) is a playful color picking tool. It follows simple rules and uses lots of random numbers to help you come up with pleasing color combinations or just chill while cycling through color harmonies (I almost a bit psychedelic while listening to <a href="https://mynoise.net/NoiseMachines/tropicalRainNoiseGenerator.php">custom made white noise</a>).
 
             aside
               h2 Usage Tipps
               ol
                 li Clicking and draging or swiping on the backgroud will change the palette padding.
-                li The left and right arrow key will change the padding as well.
+                li So will the left and right arrow keys.
                 li Pressing 'Space' generates a new platte using your current settings.
-                li On mobile phone you can add this page to your home screen for a nicer user experience.
+                li On phones and tablets you can add this page to your home screen for a nicer user experience.
 
             aside
               h2 About
