--- a/main.scss
+++ b/main.scss
@@ -271,14 +271,6 @@ button {
   }
 }
 
-.wrap__showcontrast .color:hover .color__contrasts {
-  opacity: 0;
-
-  @media (max-width: 850px) {
-    opacity: 1;
-  }
-}
-
 .color__contrasts {
   opacity: 0;
   transition: 200ms opacity;
@@ -291,10 +283,6 @@ button {
   height: 10px;
   transform: 200ms opacity linear;
 
-  .wrap__hidetext & {
-
-  }
-
   .wrap__showcontrast & {
     opacity: 1;
     transition-delay: .3s;
@@ -304,6 +292,18 @@ button {
   @media (max-width: 850px) {
     left: auto;
     right: var(--size-gutter);
+
+    .wrap__hidetext & {
+      top: 1.1rem;
+    }
+  }
+}
+
+.wrap__showcontrast .color:hover .color__contrasts {
+  opacity: 0;
+
+  @media (max-width: 850px) {
+    opacity: 1;
   }
 }
 
@@ -392,8 +392,19 @@ button {
   }
 }
 
+.wrap__showcontrast.wrap__hidetext .color__value {
+  @media (max-width: 850px) {
+    opacity: 0;
+  }
+}
+
 .wrap__showcontrast .color:hover .color__value {
   opacity: 1;
+  transition-delay: 350ms;
+}
+
+.wrap__showcontrast.wrap__hidetext .color:hover .color__value {
+  opacity: 0;
   transition-delay: 350ms;
 }
 
