--- a/index.pug
+++ b/index.pug
@@ -64,6 +64,8 @@ html(lang="en-US")
               option(v-for="functionName in generatorFunctionList", :value=functionName).
                 {{ functionName }}
 
+        div.pannel__setting(v-if="generatorFunction === 'ImageExtract'")
+          img(v-bind:src="imgURL" alt="Image the colors are extracted from")
         label.pannel__setting
           h4.pannel__settingtitle
             span Colors
@@ -80,7 +82,7 @@ html(lang="en-US")
           .pannel__inputs
             input(type="range", v-model.number="padding", min="0", max="1", step=".001")
 
-        label.pannel__setting(v-if="generatorFunction !== 'RandomColor.js' ")
+        label.pannel__setting(v-if="generatorFunction !== 'RandomColor.js' && generatorFunction !== 'ImageExtract'")
           h4.pannel__settingtitle Color Mode
           .pannel__inputs
             select(v-model="colorMode")
@@ -101,7 +103,7 @@ html(lang="en-US")
           .pannel__inputs
             input(type="range", v-model.number="colorsInGradient", min="2", :max="amount")
 
-        label.pannel__setting(v-if="generatorFunction !== 'Full Random' && generatorFunction !== 'RandomColor.js'")
+        label.pannel__setting(v-if="generatorFunction !== 'Full Random' && generatorFunction !== 'RandomColor.js' && generatorFunction !== 'ImageExtract'")
           h4.pannel__settingtitle
             span Min. Hue angle difference
             input(type="number", v-model.number="minHueDistance", min="1", :max="360/colorsInGradient", step="1")
