feat(engines): adds image extract

--- a/index.pug
+++ b/index.pug
@@ -65,7 +65,8 @@ html(lang="en-US")
                 {{ functionName }}
 
         div.pannel__setting(v-if="generatorFunction === 'ImageExtract'")
-          img(v-bind:src="imgURL" alt="Image the colors are extracted from")
+          div.pannel__img
+            img(v-bind:src="imgURL" alt="Image the colors are extracted from")
         label.pannel__setting
           h4.pannel__settingtitle
             span Colors
