--- a/main.scss
+++ b/main.scss
@@ -823,10 +823,20 @@ button {
   transition-delay: 100ms, 0, 0, 0;
   margin-top: .5em;
 }
+.pannel__img {
+  border: 10px solid var(--color-inverted);
 
+  @media (max-width: 850px) {
+    width: fit-content;
+  }
+}
 .pannel__img img {
   display: block;
-  max-width: 100%;
+  width: 100%;
+  @media (max-width: 850px) {
+    width: auto;
+    max-width: 100%;
+  }
 }
 
 .wrap__showcontrast .pannel__setting--bnw {
@@ -982,6 +992,27 @@ button {
   margin-bottom: 1.75em;
 }
 
+// fetching
+.is-imagefetching {
+  .button.refresh {
+    animation: pulsate 1s infinite alternate;
+    cursor: wait;
+  }
+  .colors .color {
+    .color__values,
+    .color__name {
+      animation: pulsate .5s infinite alternate;
+    }
+
+    @for $i from 1 through 10 {
+      &:nth-child(#{$i}) .color__values,
+      &:nth-child(#{$i}) .color__name {
+        animation-delay: ($i/10) * 1s;
+      }
+    }
+  }
+}
+
 // intro animation
 
 .is-loading {
@@ -1105,6 +1136,12 @@ button {
   100% {
     visibility: visible;
     opacity: 0.5;
+  }
+}
+
+@keyframes pulsate {
+  100% {
+    opacity: 0.25;
   }
 }
 
