--- a/main.scss
+++ b/main.scss
@@ -615,7 +615,8 @@ button {
     width: .8em;
     height: .8em;
     border: 1px solid var(--color-inverted);
-    margin-top: -0.2em;
+    margin-top: -0.3em;
+    flex: 0 0 0.8rem;
 
     &::after {
       opacity: 0;
@@ -824,15 +825,26 @@ button {
   margin-top: .5em;
 }
 .pannel__img {
-  border: 10px solid var(--color-inverted);
+  position: relative;
+  border: 4px solid var(--color-inverted);
 
   @media (max-width: 850px) {
     width: fit-content;
+  }
+
+  input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    opacity: 0;
   }
 }
 .pannel__img img {
   display: block;
   width: 100%;
+
   @media (max-width: 850px) {
     width: auto;
     max-width: 100%;
