--- a/main.scss
+++ b/main.scss
@@ -479,6 +479,7 @@ button {
 
   box-shadow: 0 0 0 1px rgba(#fff, 0);
 
+
   .wrap__hasGradients & {
     box-shadow: 0 0 2rem rgba(#212121, .2);
   }
@@ -948,7 +949,8 @@ button {
   }
 
   .pannel {
-    background: rgba(#212121,.25)
+    background: rgba(#212121,.25);
+
   }
 
   .colors {
@@ -964,7 +966,11 @@ button {
   &.wrap__showSettings {
     .colors {
       transform: translateX(calc(25% + var(--size-gutter)));
+      @media (max-width: 850px) {
+        transform: translateX(0%);
+      }
     }
+
     .pannel {
       transform: translateX(0%);
       transition-delay: 50ms;
