--- a/index.pug
+++ b/index.pug
@@ -59,15 +59,22 @@ html(lang="en-US")
 
         label.pannel__setting
           h4.pannel__settingtitle Randomizer Engine
-          .pannel__inputs
+          .pannel__inputs.pannel__inputs--select
+            svg
+              use(xlink:href="#icon-dropdown")
             select(v-model.number="generatorFunction")
               option(v-for="functionName in generatorFunctionList", :value=functionName).
                 {{ functionName }}
 
-        label.pannel__setting(v-if="generatorFunction === 'ImageExtract'")
+        .pannel__setting(v-if="generatorFunction === 'ImageExtract'")
           div.pannel__img(v-if="imgURL")
-            img(v-bind:src="imgURL" alt="Image the colors are extracted from")
-            input(type="file" accept="image/*" ref="file" v-on:change="handlefile")
+            label
+              img(v-bind:src="imgURL" alt="Image the colors are extracted from")
+              svg.icon.icon--up
+                use(xlink:href="#icon-upload")
+              input(type="file" accept="image/*" ref="file" v-on:change="handlefile")
+            svg.icon.icon--re(v-on:click="newColors(true)")
+              use(xlink:href="#icon-refresh")
 
         label.pannel__setting
           h4.pannel__settingtitle
@@ -87,14 +94,18 @@ html(lang="en-US")
 
         label.pannel__setting(v-if="generatorFunction !== 'RandomColor.js' && generatorFunction !== 'ImageExtract'")
           h4.pannel__settingtitle Color Mode
-          .pannel__inputs
+          .pannel__inputs.pannel__inputs--select
+            svg
+              use(xlink:href="#icon-dropdown")
             select(v-model="colorMode")
               option(v-for="mode in colorModeList", :value=mode).
                 {{ mode }}
 
         label.pannel__setting
           h4.pannel__settingtitle Interpolation Model
-          .pannel__inputs
+          .pannel__inputs.pannel__inputs--select
+            svg
+              use(xlink:href="#icon-dropdown")
             select(v-model="intermpolationColorModel")
               each mode in ['lab', 'rgb', 'lrgb', 'hsl', 'hsv', 'hsi', 'lch']
                 option(value=mode)=mode
@@ -117,51 +128,81 @@ html(lang="en-US")
         label.pannel__setting.pannel__setting--inline(title="WCAG 2.0 AA Contrasts")
           input(type="checkbox", v-model="showContrast")
           i.pannel__checkbox
+            svg
+              use(xlink:href="#icon-check")
+
           h4.pannel__settingtitle Show Contrasting Colors
 
         label.pannel__setting.pannel__setting--bnw.pannel__setting--inline(title="Toggles Black/White contrst to contrasting colors")
           input(type="checkbox", v-model="addBWContrast")
           i.pannel__checkbox
+            svg
+              use(xlink:href="#icon-check")
+
           h4.pannel__settingtitle Add Black &amp; White
 
         label.pannel__setting.pannel__setting--inline
           input(type="checkbox", v-model="hasBackground")
           i.pannel__checkbox
+            svg
+              use(xlink:href="#icon-check")
+
           h4.pannel__settingtitle Show Background
 
         label.pannel__setting.pannel__setting--inline
           input(type="checkbox", v-model="hasGradients")
           i.pannel__checkbox
+            svg
+              use(xlink:href="#icon-check")
+
           h4.pannel__settingtitle Show Glow
 
         label.pannel__setting.pannel__setting--inline
           input(type="checkbox", v-model="hasBleed")
           i.pannel__checkbox
+            svg
+              use(xlink:href="#icon-check")
+
           h4.pannel__settingtitle Color Bleed
 
         label.pannel__setting.pannel__setting--inline
           input(type="checkbox", v-model="hideText")
           i.pannel__checkbox
+            svg
+              use(xlink:href="#icon-check")
+
           h4.pannel__settingtitle Hide Text
 
         label.pannel__setting.pannel__setting--inline
           input(type="checkbox", v-model="hasOutlines")
           i.pannel__checkbox
+            svg
+              use(xlink:href="#icon-check")
+
           h4.pannel__settingtitle Visually Separate Things
 
         label.pannel__setting.pannel__setting--inline.pannel__setting--contrast
           input(type="checkbox", v-model="highContrast")
           i.pannel__checkbox
+            svg
+              use(xlink:href="#icon-check")
+
           h4.pannel__settingtitle High Contrast
 
         label.pannel__setting.pannel__setting--inline.pannel__setting--contrast
           input(type="checkbox", v-model="expandUI")
           i.pannel__checkbox
+            svg
+              use(xlink:href="#icon-check")
+
           h4.pannel__settingtitle Expand UI
 
         label.pannel__setting.pannel__setting--inline.pannel__setting--contrast
           input(type="checkbox", v-model="autoHideUI")
           i.pannel__checkbox
+            svg
+              use(xlink:href="#icon-check")
+
           h4.pannel__settingtitle Autohide UI
 
         label.pannel__setting
@@ -193,15 +234,6 @@ html(lang="en-US")
                 li Originally released as a <a href="https://codepen.io/meodai/pen/RerqjG" hreflang="en">Codepen</a>.
                 li Source is on <a href="https://github.com/meodai/farbvelo">github</a> and licensed under a <a href="https://github.com/meodai/farbvelo/blob/main/LICENSE.md">Creative Commons Attribution Share Alike 4.0</a> license.
 
-            aside
-              details
-                summary Credits
-                ol
-                  li All icons are from <a href="https://thenounproject.com/">the noun project</a>. They are using a Creative Commons Attribution Share Alike 4.0 license.
-                  li App Icon made by <a href="https://linktr.ee/Flatart">Flatart</a>.
-                  li Refresh Icon made by <a href="https://thenounproject.com/search/?q=reload&i=1973430">Ravindra Kalkani</a>.
-                  li Settings Icon made by <a href="https://iconix.si/home">Gregor</a>.
-
           footer
             a(href="https://www.elastiq.ch/" hreflang="en").ellogo
               svg(xmlns='http://www.w3.org/2000/svg' viewbox='0 0 352 185')
@@ -216,21 +248,47 @@ html(lang="en-US")
         color(v-for="(c, i) in colors", :nextcolorhex="colors[i+1] || colors[colors.length - 2]" :name="names.length ? names[i] : 'rainbow'", :colorvaluetype="colorValueType", :colorhex="c", :contrastcolor="getContrastColor(c)" :contrastcolors="wcagContrastColors[i]")
 
       .buttons
-        button.button.settings(v-on:click="toggleSettings", aria-label="show settngs pannel").
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 77.6 85.4">
-            <g>
-              <path d="M73.9,39H66.3a13.29,13.29,0,0,0-12.7-9.7A13.63,13.63,0,0,0,40.8,39H3.7a3.7,3.7,0,0,0,0,7.4H40.8a13.16,13.16,0,0,0,25.4,0h7.6a3.69,3.69,0,0,0,3.7-3.7A3.55,3.55,0,0,0,73.9,39ZM53.6,48.7a6,6,0,0,1-6-6,6,6,0,0,1,12,0A6,6,0,0,1,53.6,48.7Z"/>
-              <path d="M3.7,17.1h7.9a13.16,13.16,0,0,0,25.4,0H73.9a3.69,3.69,0,0,0,3.7-3.7,3.63,3.63,0,0,0-3.7-3.7H37a13.16,13.16,0,0,0-25.4,0H3.7A3.69,3.69,0,0,0,0,13.4,3.63,3.63,0,0,0,3.7,17.1ZM24.3,7.4a6,6,0,0,1,6,6,5.89,5.89,0,0,1-6,6,6,6,0,0,1-6-6A6.15,6.15,0,0,1,24.3,7.4Z"/>
-              <path d="M73.9,68.3H37a13.16,13.16,0,0,0-25.4,0H3.7A3.69,3.69,0,0,0,0,72a3.63,3.63,0,0,0,3.7,3.7h7.9a13.16,13.16,0,0,0,25.4,0H73.9A3.69,3.69,0,0,0,77.6,72,3.63,3.63,0,0,0,73.9,68.3ZM24.3,78a6,6,0,0,1-6-6,6,6,0,0,1,12,0A6,6,0,0,1,24.3,78Z"/>
-            </g>
-          </svg>
-        button.button.copy(v-on:click="copy", aria-label="copy all colors to clipboard").
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 26.25 36.8">
-            <path d="M12.9,0A4.12,4.12,0,0,0,8.79,4.1a1.27,1.27,0,0,0,0,.2H5.62A5.63,5.63,0,0,0,0,9.93V31.18A5.62,5.62,0,0,0,5.62,36.8h15a5.63,5.63,0,0,0,5.63-5.62V9.93A5.64,5.64,0,0,0,20.62,4.3H18.74v0l-.28,0H17c0-.07,0-.13,0-.2A4.12,4.12,0,0,0,12.9,0Zm0,1.88a2.2,2.2,0,0,1,2.22,2.2v0a2.13,2.13,0,0,1-.11.7A1,1,0,0,0,15.26,6a1,1,0,0,0,.82.17h2.38c.08,0,.11,0,.11.11V8.12c0,.08,0,.11-.11.11H7.79c-.08,0-.11,0-.11-.11V6.3a.1.1,0,0,1,.09-.11H10a1,1,0,0,0,.75-.48.94.94,0,0,0,0-.89,2.38,2.38,0,0,1-.11-.7,2.2,2.2,0,0,1,2.19-2.23h0ZM5.62,6.18h.19s0,.08,0,.11V8.11a2,2,0,0,0,2,2H18.46a2,2,0,0,0,2-2V6.29a.45.45,0,0,0,0-.11h.18a3.74,3.74,0,0,1,3.75,3.75h0V31.18a3.74,3.74,0,0,1-3.75,3.75h-15a3.74,3.74,0,0,1-3.75-3.75h0V9.93A3.75,3.75,0,0,1,5.62,6.18Z"/>
-          </svg>
-        button.button.refresh(title="Or hit the Space bar", v-on:click="newColors(true)", aria-label="generate new palette").
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 23 23" version="1.1" x="0px" y="0px"><path d="M 12.109896,2.9653518 C 10.830826,2.9134678 9.5257058,3.132602 8.2817758,3.648946 c -3.9806,1.652399 -6.2540499,5.897846 -5.4179699,10.123046 0.8360799,4.2253 4.5540699,7.274132 8.8613301,7.269532 a 0.9995584,1.0006417 14.999899 1 0 0,-2 c -3.3667302,0 -6.2475202,-2.360557 -6.9004002,-5.660157 -0.65294,-3.2997 1.11025,-6.592765 4.22266,-7.884765 3.1124002,-1.292 6.6825102,-0.213669 8.5488302,2.582031 1.85391,2.77709 1.49946,6.460477 -0.8418,8.845703 l 0.0781,-2.365234 a 1.0001,1.0001 0 0 0 -0.98242,-1.046875 1.0001,1.0001 0 0 0 -1.01758,0.982422 l -0.15235,4.59375 a 1.0001,1.0001 0 0 0 1.03321,1.033203 l 4.5957,-0.152344 a 1.0001,1.0001 0 1 0 -0.0664,-1.998047 l -1.79492,0.06055 c 2.74739,-3.056097 3.10892,-7.618693 0.80859,-11.064453 -1.64326,-2.461525 -4.33252,-3.887808 -7.14648,-4.0019532 z"/></svg>
+        button.button.settings(v-on:click="toggleSettings", aria-label="show settngs pannel")
+          svg
+            use(xlink:href="#icon-cog")
+        button.button.copy(v-on:click="copy", aria-label="copy all colors to clipboard")
+          svg
+            use(xlink:href="#icon-copy")
+          svg.check
+            use(xlink:href="#icon-check")
+        button.button.refresh(title="Or hit the Space bar", v-on:click="newColors(true)", aria-label="generate new palette")
+          svg
+            use(xlink:href="#icon-refresh")
 
-
+      .icons.
+        <svg width="0" height="0" class="hidden">
+          <symbol stroke-width="1.5" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="icon-dropdown">
+            <path vector-effect="non-scaling-stroke" d="M15.5 9.5L12 6L8.5 9.5" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"></path>
+            <path vector-effect="non-scaling-stroke" d="M15.5 14L12 17.5L8.5 14" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"></path>
+          </symbol>
+          <symbol stroke-width="1.5" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="icon-floppy">
+            <path vector-effect="non-scaling-stroke" d="M3 19V5C3 3.89543 3.89543 3 5 3H16.1716C16.702 3 17.2107 3.21071 17.5858 3.58579L20.4142 6.41421C20.7893 6.78929 21 7.29799 21 7.82843V19C21 20.1046 20.1046 21 19 21H5C3.89543 21 3 20.1046 3 19Z" stroke="currentColor" stroke-width="1.5"></path>
+            <path vector-effect="non-scaling-stroke" d="M8.6 9H15.4C15.7314 9 16 8.73137 16 8.4V3.6C16 3.26863 15.7314 3 15.4 3H8.6C8.26863 3 8 3.26863 8 3.6V8.4C8 8.73137 8.26863 9 8.6 9Z" stroke="currentColor" stroke-width="1.5"></path>
+            <path vector-effect="non-scaling-stroke" d="M6 13.6V21H18V13.6C18 13.2686 17.7314 13 17.4 13H6.6C6.26863 13 6 13.2686 6 13.6Z" stroke="currentColor" stroke-width="1.5"></path>
+          </symbol>
+          <symbol stroke-width="1.5" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="icon-copy">
+            <path vector-effect="non-scaling-stroke" d="M5 21V5C5 3.89543 5.89543 3 7 3H17C18.1046 3 19 3.89543 19 5V21L13.0815 17.1953C12.4227 16.7717 11.5773 16.7717 10.9185 17.1953L5 21Z" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"/>
+          </symbol>
+          <symbol stroke-width="1.5" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="icon-upload">
+            <path vector-effect="non-scaling-stroke" d="M12 22V13M12 13L15.5 16.5M12 13L8.5 16.5" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"/>
+            <path vector-effect="non-scaling-stroke" d="M20 17.6073C21.4937 17.0221 23 15.6889 23 13C23 9 19.6667 8 18 8C18 6 18 2 12 2C6 2 6 6 6 8C4.33333 8 1 9 1 13C1 15.6889 2.50628 17.0221 4 17.6073" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"/>
+          </symbol>
+          <symbol stroke-width="1.5" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="icon-refresh">
+            <path vector-effect="non-scaling-stroke" d="M21.8883 13.5C21.1645 18.3113 17.013 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C16.1006 2 19.6248 4.46819 21.1679 8" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"></path>
+            <path vector-effect="non-scaling-stroke" d="M17 8H21.4C21.7314 8 22 7.73137 22 7.4V3" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"></path>
+          </symbol>
+          <symbol stroke-width="1.5" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="icon-check">
+            <path vector-effect="non-scaling-stroke" d="M5 13L9 17L19 7" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"></path>
+          </symbol>
+          <symbol stroke-width="1.5" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="icon-cog">
+            <path vector-effect="non-scaling-stroke" d="M12 15C13.6569 15 15 13.6569 15 12C15 10.3431 13.6569 9 12 9C10.3431 9 9 10.3431 9 12C9 13.6569 10.3431 15 12 15Z" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"/>
+            <path vector-effect="non-scaling-stroke" d="M19.6224 10.3954L18.5247 7.7448L20 6L18 4L16.2647 5.48295L13.5578 4.36974L12.9353 2H10.981L10.3491 4.40113L7.70441 5.51596L6 4L4 6L5.45337 7.78885L4.3725 10.4463L2 11V13L4.40111 13.6555L5.51575 16.2997L4 18L6 20L7.79116 18.5403L10.397 19.6123L11 22H13L13.6045 19.6132L16.2551 18.5155C16.6969 18.8313 18 20 18 20L20 18L18.5159 16.2494L19.6139 13.598L21.9999 12.9772L22 11L19.6224 10.3954Z" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"/>
+          </symbol>
+        </svg>
     script(src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.17/vue.min.js")
     script(src="main.js")
