--- a/main.scss
+++ b/main.scss
@@ -530,6 +530,7 @@ button {
     margin-top: -.075em;
     transform: translate(-50%, -50%) scale(.2);
     opacity: 0;
+    font-weight: 100;
   }
 }
 
