--- a/main.scss
+++ b/main.scss
@@ -34,8 +34,11 @@ a {
   color: inherit;
 }
 
-svg path {
-  stroke-width: 1px;
+.icons {
+  display: none;
+  svg path {
+    stroke-width: 1.75px;
+  }
 }
 
 button {
@@ -530,7 +533,7 @@ button {
     margin-top: -.075em;
     transform: translate(-50%, -50%) scale(.2);
     opacity: 0;
-    font-weight: 100;
+    font-weight: 200;
   }
 }
 
@@ -1026,7 +1029,21 @@ button {
 
     .button {
       transform: translateX(0);
+      @media (max-width: 850px) {
+        transform: translateX(5rem);
+      }
+
+      &.copy {
+        transform: translateX(7rem);
+
+      }
+      &.refresh {
+        @media (max-width: 850px) {
+          transform: translateX(9rem);
+        }
+      }
     }
+
   }
 }
 
