--- a/index.pug
+++ b/index.pug
@@ -37,6 +37,7 @@ html(lang="en-US")
     meta(name="viewport", content="width=device-width, initial-scale=1")
     meta(name="apple-mobile-web-app-capable", content="yes")
     meta(name="apple-mobile-web-app-status-bar-style" content="black-translucent")
+    meta(name="theme-color" content="#212121")
 
     link(href="https://rsms.me/inter/inter-ui.css", rel="stylesheet")
 
