feat(engines): uses google thing

--- a/index.pug
+++ b/index.pug
@@ -5,7 +5,7 @@ html(lang="en-US")
     meta(charset='UTF-8')
 
     title FarbVélo —— Random Color Cycler
-    meta(name='title', content='FarbVélo — Random Color Cycler')
+    meta(name='title', content='FarbVélo —— Random Color Cycler')
     meta(name='description', content='Generative color harmonies. The random color expolorer')
 
     link(rel="apple-touch-icon" sizes="180x180" href="./public//apple-touch-icon.png")
@@ -23,14 +23,14 @@ html(lang="en-US")
     //  Open Graph / Facebook
     meta(property='og:type', content='website')
     meta(property='og:url', content='https://farbVelo.elastiq.ch/')
-    meta(property='og:title', content='FarbVélo — Random Color Cycler')
+    meta(property='og:title', content='FarbVélo —— Random Color Cycler')
     meta(property='og:description', content='Generative color harmonies. The random color expolorer')
     meta(property='og:image', content='https://farbvelo.elastiq.ch/farbvelo.png')
 
     //  Twitter
     meta(property='twitter:card', content='summary_large_image')
     meta(property='twitter:url', content='https://farbVelo.elastiq.ch/')
-    meta(property='twitter:title', content='FarbVélo — Random Color Cycler')
+    meta(property='twitter:title', content='FarbVélo —— Random Color Cycler')
     meta(property='twitter:description', content='Generative color harmonies. The random color expolorer')
     meta(property='twitter:image', content='https://farbvelo.elastiq.ch/farbvelo.png')
 
