--- a/main.scss
+++ b/main.scss
@@ -18,6 +18,10 @@ body, html {
   height: -webkit-fill-available;
   min-height: 100vh;
   min-height: -webkit-fill-available;
+
+  @media (max-width: 850px) {
+    overflow-x: hidden;
+  }
 }
 
 html {
@@ -216,7 +220,8 @@ button {
   //mask: $noise;
 
   align-items: center;
-  padding: 0 var(--size-gutter);
+  //padding: 0 var(--size-gutter);
+  padding: 0 4vmin;
   flex-grow: 1;
 
   transition: 0ms color linear,
@@ -424,10 +429,12 @@ button {
   position: absolute;
 
   right: 24%;
+  //right: 50%;
   bottom: 10vmin;
   display: flex;
   z-index: 20;
   transform: translate(1.1em, 1.1em);
+  //transform: translateX(50%) translate(0, 1.1em);
 
   @media (max-width: 850px) {
     right: 10vmin;
@@ -654,11 +661,17 @@ button {
 
     & + & {
       margin-top: calc(var(--size-gutter) * 2);
+
+    }
+
+    &--checkbox + &--checkbox {
+      margin-top: var(--size-gutter);
     }
 
     &--inline {
       display: flex;
       align-items: center;
+
       .pannel__settingtitle {
         margin-left: calc(var(--size-gutter) * .5);
       }
@@ -835,13 +848,26 @@ button {
               400ms margin-top cubic-bezier(0.3, 0.7, 0, 1),
               200ms opacity;
   opacity: 0;
-  margin-bottom: -2em;
+  margin-bottom: calc(var(--size-gutter) * -1);
   transition-delay: 100ms, 0, 0, 0;
   margin-top: .5em;
 }
+
 .pannel__img {
   position: relative;
-  border: 4px solid var(--color-inverted);
+  border: 1px solid var(--color-inverted);
+  padding: 4px;
+  min-height: 2rem;
+
+  &::before {
+    position: absolute;
+    content: '';
+    top: 0;
+    right: 0;
+    background: var(--color-bg);
+    width: 3.5rem;
+    height: 1.9rem;
+  }
 
   @media (max-width: 850px) {
     width: fit-content;
@@ -852,7 +878,7 @@ button {
     height: 1rem;
     content: "▲";
     position: absolute;
-    bottom: .5rem;
+    top: .5rem;
     right: .5rem;
   }
 
@@ -860,7 +886,7 @@ button {
     position: absolute;
     top: 0;
     left: 0;
-    bottom: 0;
+    top: 0;
     right: 0;
     opacity: 0;
   }
@@ -877,7 +903,7 @@ button {
 
   .icon--re {
     right: 1.5rem;
-    bottom: 0;
+    top: 1rem;
     animation-name: rotate;
     animation-duration: 3s;
     animation-iteration-count: infinite;
